--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Rokitko</title>
+    <link rel="stylesheet" href="design.css">
+    <link rel="javascript" href="index.html">
 </head>
 <body>
-<h1>Welcome to Michael's Homework</h1>
-<a href="exercise/index.html" target="_self"> Exercises</a>
+<header>
+    <nav role="navigation">
+        <ul class="styled">
+            <li><img class="mylogo" src="images/logo.png"></li>
+            <li><a href="exercise/ex1/index.html" target="_blank">EX1</a></li>
+            <li>|</li>
+            <li><a href="exercise/ex2/index.html" target="_blank">EX3</a></li>
+            <li>|</li>
+            <li><a href="#" target="_blank">Final Project</a></li>
+            <li>|</li>
+            <li><a href="https://github.com/Alarn777" target="_blank">My GitHub</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <section class="body-top">
+        <img src="images/background_top.png">
+        <a href="https://github.com/Alarn777" target="_blank" class="button2">href="My GitHub"</a>
+        <img src="images/background_bot.png">
+
+
+    </section>
+    <section class="my_info">
+        <h3>מיכאל רוקיטקו</h3>
+            <p>
+                <br>Second year student on the faculty of Software Engineering
+                <br>Involved in various projects including: WebDesign, IOT, Game design etc.
+                <br>25 years old, fluent in English,Hebrew,Russian and basic Japanese
+            </p>
+    </section>
+    <section class="languages">
+        <h3>Programming Languages</h3>
+        <ul >
+            <li><img src="images/logos/cpp.png"></li>
+            <li><img src="images/logos/Swift_logo.png"></li>
+            <li><img src="images/logos/Python.png"></li>
+            <li><img src="images/logos/html_5.png"></li>
+        </ul>
+    </section>
+</main>
+    <footer>
+        <button class="button" onclick="window.location.href='https://www.facebook.com/alarn' ">Facebook</button>
+        <button class="button" onclick="window.location.href='mailto:alarn777@gmail.com' ">Email Me</button>
+    </footer>
 </body>
 </html>
